# draft_room_intelligence

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
data/: README.md
docs/: codex_routing.md  codex_usage_measurement.md  data_enrichment_stories.md  demo_2025_business_review.md  demo_2025_collection_guide.md  demo_2025_data_checklist.md  demo_2025_data_contract.md  demo_2025_flow.md  demo_2025_gap_report.md  demo_2025_modeling_sanity.md  demo_2025_presenter_script.md  demo_2025_readiness.md  historical_class_etl.md  historical_league_enrichment.md  historical_validation.md  nhl_contract_ingestion.md  nhl_roster_snapshot_ingestion.md  open_stats_csv_bridge.md  project_brief.md  reproducibility.md  technical_debt_and_ingestion_plan.md
tests/: test_chl_stats.py  test_cli_evaluate.py  test_codex_context_routes.py  test_codex_dispatch.py  test_codex_routing_audit.py  test_codex_task_routing.py  test_codex_telemetry.py  test_codex_usage.py  test_demo_acceptance.py  test_demo_baseline.py  test_demo_brief.py  test_demo_data.py  test_demo_export.py  test_demo_gaps.py  test_demo_modeling.py  test_demo_readiness_workflow.py  test_demo_sanity.py  test_demo_snapshot.py  test_draft_range_etl.py  test_eliteprospects_csv.py  test_eliteprospects_pdf.py  test_ep_pdf_overlay.py  test_europe_stats.py  test_evaluation_baselines.py  test_feature_table.py  test_historical_validation.py  test_ingestion_plan.py  test_league_enrichment.py  test_league_ingestion_audit.py  test_league_pipeline.py  test_league_standardization.py  (+18 more)
(+187 files in other folders)
