[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "draft-room-intelligence"
version = "0.1.0"
description = "Explainable draft and roster decision-intelligence tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sergei Smirnov" },
]
dependencies = [
  "pypdf>=4.0",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
draft-room-intel = "draft_room_intelligence.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
